website header is almost done

--- a/src/scss/bootstrap/_custom.scss
+++ b/src/scss/bootstrap/_custom.scss
@@ -55,7 +55,7 @@ $link-decoration:       none;
 $link-hover-color:      darken($link-color, 15%);
 $link-hover-decoration: none;
 
-$font-weight-normal: 300;
+$font-weight-normal: 400;
 $font-weight-bold: 700;
 
 $font-weight-base: $font-weight-normal;
@@ -69,7 +69,7 @@ $grid-gutter-width: 30px;
 $input-focus-border-color: theme-color("primary");
 
 
-$font-family-sans-serif: "Montserrat", Arial, sans-serif;
+$font-family-sans-serif: "Work Sans", Arial, sans-serif;
 $font-family-serif:      "Crimson Text", Georgia, "Times New Roman", Times, serif;
 
 
