--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -80,7 +80,7 @@ input, select, textarea {
 	padding-right: 40px;
 }
 .pb_outline-light {
-	border: 1px solid rgba(255,255,255,.2);
+	border: 1px solid rgba(255,255,255,.2) !important;
 	text-transform: uppercase;
 	background: none;
 	color: rgba(255,255,255,1);
