--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -4,6 +4,14 @@
 	@include media-breakpoint-down(md) {
 		padding: 30px;
 	}
+
+	.events-list {
+		p {
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
+	}
 }
 
 // inputs
@@ -74,6 +82,10 @@ input, select, textarea {
 .btn-shadow-blue {
 	@include pb_box-shadow(0px, 15px, 28px, -5px, rgba($blue,.45));
 }
+
+.btn-shadow-meadow {
+	@include pb_box-shadow(0px, 15px, 28px, -5px, rgba(theme-color("cssg-meadow"),.45));
+}
 .pb_btn-pill {
 	border-radius: 50px;
 	padding-left: 40px;
@@ -84,9 +96,11 @@ input, select, textarea {
 	text-transform: uppercase;
 	background: none;
 	color: rgba(255,255,255,1);
+	&:hover {
+		background: rgba(255,255,255,.2)!important;
+	}
 	&:hover, &:active, &:focus {
 		outline: none;
-		background: $white!important;
 		border: 1px solid rgba(255,255,255,1);
 		color: $black;
 	}
