--- a/src/scss/components/_testimonial.scss
+++ b/src/scss/components/_testimonial.scss
@@ -12,6 +12,7 @@
 	blockquote {
 		font-family: $font-family-serif;
 		line-height: 1.7;
+		font-size: 24px;
 		color: $gray-700;
 	}
 	
@@ -36,7 +37,7 @@
 		.media-body {
 			position: relative;
 		}
-		.quote {
+		.quote-left {
 			font-size: 150px;
 			font-family: $font-family-serif;
 			color: $gray-300;
@@ -44,6 +45,17 @@
 			top: 40px;
 			position: absolute;
 			left: 0%;
+			z-index: -1;
+		}
+
+		.quote-right {
+			font-size: 150px;
+			font-family: $font-family-serif;
+			color: $gray-300;
+			line-height: 0;
+			top: 40px;
+			position: absolute;
+			right: 0%;
 			z-index: -1;
 		}
 	}
@@ -65,7 +77,7 @@
 	blockquote {
 		font-family: $font-family-serif;
 		font-style: italic;
-		font-size: 18px;
+		font-size: 24px;
 		line-height: 1.7;
 		color: $gray-700;
 	}
