--- a/src/scss/components/_pricing.scss
+++ b/src/scss/components/_pricing.scss
@@ -1,12 +1,16 @@
 .pb_pricing_v1 {
-	margin-bottom: 50px;
+	// margin-bottom: 50px;
+	height: 90%;
+
 	.price {
 		font-size: 50px;
 		color: theme-color('primary');
+
 		sup {
 			font-size: 20px;
 			top: -1em;
 		}
+
 		span {
 			font-size: 20px;
 			color: $gray-500;
